--- a/cuppa/src/app/groups/group-page/group-activity/group-activity.component.html
+++ b/cuppa/src/app/groups/group-page/group-activity/group-activity.component.html
@@ -5,7 +5,7 @@
       <div class="card-body">
         <div class="d-flex" style="flex-direction: row">
           <div class="avatar"></div>
-          <div class="ml-1 my-auto">
+          <div class="ml-1 my-auto" style="min-width: 20%;">
             {{ users[activity.user].name }}
           </div>
           
