--- a/cuppa/src/colors.scss
+++ b/cuppa/src/colors.scss
@@ -1,5 +1,6 @@
 $colors: (
-    "accent": #57839E,
+    // "accent": #c29f8c,
+    "primary": #57839E,
     "main": #2C3E50,
     "navbar": #B5DDEC,
     "secondary": #748994  
