--- a/cuppa/src/app/navbar/navbar.component.scss
+++ b/cuppa/src/app/navbar/navbar.component.scss
@@ -1,20 +1,21 @@
 @import '../../colors.scss';
 
-.navbar {
-    &.navbar-light {
-        .nav-item {
-            .nav-link {
-                color: map-get($colors, "main");
-            }
-        }
+// .navbar {
+//     &.navbar-light {
+//         .nav-item {
+//             .nav-link {
+//                 color: map-get($colors, "main");
+//             }
+//         }
 
-        .nav-item.active > .nav-link {
-            color: map-get($colors, "accent");
-        }
-    }
+//         .nav-item.active > .nav-link {
+//             color: map-get($colors, "primary");
+//             border-bottom: 3px solid map-get($colors, "primary");
+//         }
+//     }
 
-    background-color: map-get($colors, "navbar");
-}
+//     background-color: map-get($colors, "navbar");
+// }
 
 .ng-valid[required], .ng-valid.required  {
   border-left: 5px solid #42A948; /* green */
