Groups sidebar also using data from Store

--- a/cuppa/src/app/groups/groups-list/groups-list.component.html
+++ b/cuppa/src/app/groups/groups-list/groups-list.component.html
@@ -1,5 +1,6 @@
 <label class="emphasis">My Groups</label>
 
-<div *ngIf="myGroups">
-  <app-group [group]="group" [users]="myGroups.users" *ngFor="let group of myGroups.groups"></app-group>
-</div>
+<app-group [group]="group" 
+           [users]="(groups | async) ? (groups | async).users : {}" 
+           *ngFor="let group of (groups | async) ? (groups | async).groups : []">
+</app-group>
