Fix sidebar nav link color

--- a/cuppa/src/app/groups/groups-sidebar/groups-sidebar.component.scss
+++ b/cuppa/src/app/groups/groups-sidebar/groups-sidebar.component.scss
@@ -16,6 +16,6 @@
 // same rule in navbar scss
 .nav {
     .nav-item.active > .nav-link {
-        color: map-get($colors, "accent");
+        color: map-get($colors, "primary");
     }
 }
