--- a/cuppa/src/app/groups/group-page/group-meetups/group-meetups.component.html
+++ b/cuppa/src/app/groups/group-page/group-meetups/group-meetups.component.html
@@ -1,3 +1,5 @@
-<p>
-  group-meetups works!
-</p>
+<div class="card" *ngFor="let meetup of (meetups | async)">
+  <div class="card-body">
+    {{ meetup | json }}
+  </div>
+</div>
