--- a/cuppa/src/app/groups/group-page/group-members/group-members.component.html
+++ b/cuppa/src/app/groups/group-page/group-members/group-members.component.html
@@ -1,3 +1,7 @@
-<p>
-  group-members works!
-</p>
+<div class="container">
+  <div class="card" *ngFor="let member of (members | async)">
+    <div class="card-body">
+      {{ (users | async)[member] | json }}
+    </div>
+  </div>
+</div>
