Update groups page style

--- a/cuppa/src/app/groups/group-page/group-activity/group-activity.component.html
+++ b/cuppa/src/app/groups/group-page/group-activity/group-activity.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container ml-0">
   <div *ngIf="group">
     <div class="card" height="3em" *ngFor="let activity of group.activity">
 
