--- a/cuppa/src/app/groups/group-page/group-members/group-members.component.html
+++ b/cuppa/src/app/groups/group-page/group-members/group-members.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container ml-0">
   <div class="card" *ngFor="let member of (members | async)">
     <div class="card-body">
       {{ (users | async)[member] | json }}
