--- a/cuppa/src/app/groups/group-page/group-meetups/group-meetups.component.html
+++ b/cuppa/src/app/groups/group-page/group-meetups/group-meetups.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container ml-0">
   <div class="card" *ngFor="let meetup of (meetups | async)">
     <div class="card-body">
       {{ meetup | json }}
