Add bottom padding to cards

--- a/cuppa/src/app/groups/group-page/group-activity/group-activity.component.html
+++ b/cuppa/src/app/groups/group-page/group-activity/group-activity.component.html
@@ -1,6 +1,6 @@
 <div class="container ml-0">
   <div *ngIf="group">
-    <div class="card" height="3em" *ngFor="let activity of group.activity">
+    <div class="card mb-2" height="3em" *ngFor="let activity of group.activity">
 
       <div class="card-body">
         <div class="d-flex" style="flex-direction: row">
