--- a/cuppa/src/app/groups/group-page/group-members/group-members.component.html
+++ b/cuppa/src/app/groups/group-page/group-members/group-members.component.html
@@ -1,5 +1,5 @@
 <div class="container ml-0">
-  <div class="card" *ngFor="let member of (members | async)">
+  <div class="card mb-2" *ngFor="let member of (members | async)">
     <div class="card-body">
       {{ (users | async)[member] | json }}
     </div>
