Add prototype for Meetups card

--- a/cuppa/src/app/groups/group/group.component.scss
+++ b/cuppa/src/app/groups/group/group.component.scss
@@ -1,49 +1,2 @@
 @import '../../../colors.scss';
-
-$avatarSize: 36px;
-$avatarSmSize: 24px;
-
-ul.group-list {
-    list-style: none;
-    
-    margin-bottom: 0;   // already got margin from contents
-    padding-left: 0;    // don't want padding
-
-    &.actions > * {
-        padding-top: 0px;
-        padding-bottom: 5px;
-    }
-
-    li {
-        padding-top: 5px;
-        padding-bottom: 5px;
-    }
-
-    .more-text {
-        padding-left: $avatarSize;
-    }
-}
-
-.flex-direction-row {
-    flex-direction: row;
-}
-
-label.secondary {
-    margin-bottom: 5px;
-}
-
-.avatar {
-    height: $avatarSize;
-    width: $avatarSize;
-
-    &.sm {
-        height: $avatarSmSize;
-        width: $avatarSmSize;
-    }
-
-    margin-right: 5px;
-    display: inline-block;
-    border-radius: 100%;
-    border: 2px solid map-get($colors, "secondary");
-    // background-image: url('https://i.ytimg.com/vi/ao_rfnlwUWk/hqdefault_live.jpg?sqp=CNiB7eMF-oaymwEjCNACELwBSFryq4qpAxUIARUAAAAAGAElAADIQj0AgKJDeAE=&rs=AOn4CLCFu3VA53FbwK96yQ7_p6dsGyd58g')
-}
+@import '../../info-card.scss';
