--- a/cuppa/src/app/groups/groups-list/groups-list.component.html
+++ b/cuppa/src/app/groups/groups-list/groups-list.component.html
@@ -1,6 +1,8 @@
 <label class="emphasis">My Groups</label>
 
-<app-group [group]="group" 
-           [users]="(groups | async) ? (groups | async).users : {}" 
-           *ngFor="let group of (groups | async) ? (groups | async).groups : []">
+{{ groups$ | async | json }}
+
+<app-group [group]="group"
+           [users]="(groups$ | async) ? (groups$ | async).users : {}"
+           *ngFor="let group of (groups$ | async) ? (groups$ | async).groups : []">
 </app-group>
