--- a/cuppa/src/app/navbar/navbar.component.html
+++ b/cuppa/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light">
   <a class="navbar-brand" href="#">Cuppa</a>
-  <button class="navbar-toggler" type="button" 
+  <button class="navbar-toggler" type="button"
     (click)="toggle()"
     data-toggle="collapse" data-target="#navbarSupportedContent"
     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,7 +30,7 @@
         </a>
       </li>
 
-     
+
       <!-- <li class="nav-item">
         <a class="nav-link disabled" href="#">Disabled</a>
       </li> -->
@@ -40,13 +40,13 @@
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
     </form> -->
 
-    <div class="form-inline my-2 my-lg-0" *ngIf="!(user | async); else profile">
+    <div class="form-inline my-2 my-lg-0" *ngIf="!(user$ | async); else profile">
       <button (click)="open(content)" class="btn btn-outline-primary my-2 my-sm-0">Log in</button>
     </div>
 
     <ng-template #profile>
       <ul class="navbar-nav">
-        <li class="nav-link">{{ (user | async) ? (user | async).name : '' }}</li>
+        <li class="nav-link">{{ (user$ | async) ? (user$ | async).name : '' }}</li>
       </ul>
     </ng-template>
 
@@ -67,9 +67,9 @@
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
-        
+
       </div>
-      
+
       <div class="modal-body">
         <form>
           <div class="form-group" *ngIf="!isLogin">
@@ -114,12 +114,12 @@
 
           <div class="w-100" *ngIf="isLogin">
             <hr>
-            
+
             <div class="w-100 text-center">
               <a href="#">Forgot username or password?</a>
             </div>
           </div>
-          
+
         </form>
 
       </div>
