Only show shift+scroll hint on desktop

--- a/cuppa/src/app/home/home.component.html
+++ b/cuppa/src/app/home/home.component.html
@@ -33,7 +33,7 @@
           </div>
         </app-shelf>
 
-        <div class="w-100 text-right">
+        <div class="w-100 text-right d-none d-md-block">
           Shift + scroll to scroll horizontally.
         </div>
 
