--- a/cuppa/src/app/groups/group-page/group-activity/group-activity.component.html
+++ b/cuppa/src/app/groups/group-page/group-activity/group-activity.component.html
@@ -1,24 +1,22 @@
 <div class="container ml-0">
-  <div *ngIf="group">
-    <div class="card mb-2" height="3em" *ngFor="let activity of group.activity">
+  <div class="card mb-2" height="3em" *ngFor="let activity of (group$ | async)?.activity">
 
-      <div class="card-body">
-        <div class="d-flex" style="flex-direction: row">
-          <div class="avatar"></div>
-          <div class="ml-1 my-auto" style="min-width: 20%;">
-            {{ users[activity.user].name }}
-          </div>
-          
-          <div class="my-auto ml-3 my-auto">
-            <!-- Joined the group -->
-            {{ getDescriptionForAction(activity.action) }}
-          </div>
-
-          <div class="ml-auto my-auto">
-            {{ differenceInSeconds(now, toDate(activity.createdOn)) | myTime }}
-          </div>
-
+    <div class="card-body">
+      <div class="d-flex" style="flex-direction: row">
+        <div class="avatar"></div>
+        <div class="ml-1 my-auto" style="min-width: 20%;">
+          {{ (users$ | async)[activity.user].name }}
         </div>
+
+        <div class="my-auto ml-3 my-auto">
+          <!-- Joined the group -->
+          {{ getDescriptionForAction(activity.action) }}
+        </div>
+
+        <div class="ml-auto my-auto">
+          {{ differenceInSeconds(now, toDate(activity.createdOn)) | myTime }}
+        </div>
+
       </div>
     </div>
   </div>
