--- a/cuppa/src/app/groups/group-page/group-page.component.html
+++ b/cuppa/src/app/groups/group-page/group-page.component.html
@@ -1,18 +1,19 @@
 <!-- grid, set to same cell => overlapping with same w and h-->
 <div class="d-grid w-100 h-100">
   <div class="background h-400"></div>
-  
+
   <div class="overlay h-400"></div>
-  
+
   <div class="jumbotron h-400 content mb-0 container ml-0">
-    
+
     <div class="h-100 d-flex">
       <div class="mt-auto ml-auto" *ngIf="group">
         <div class="d-flex" style="flex-direction: column;">
-          <div class="lead fw-400"> {{ group.members.length }} {{ group.members.length != 1 ? 'members' : 'member' }}
+          <div class="lead fw-400">
+            {{ group.members.length }} {{ group.members.length != 1 ? 'members' : 'member' }}
           </div>
           <h1 class="display-4">{{ group.name }}</h1>
-          <div class="lead fw-400 w-100 text-right"> 
+          <div class="lead fw-400 w-100 text-right">
             {{ group.description }}
           </div>
           <div class="text-right w-100 mt-3">
@@ -24,12 +25,9 @@
       </div>
     </div>
 
-    
+
 
   </div>
 </div>
 <app-tab-bar [navItems]="navItems" [alignLeft]="true"></app-tab-bar>
 <router-outlet></router-outlet>
-<!-- <div class="mt-3">
-  {{ group | json }}
-</div> -->
