--- a/cuppa/src/app/groups/groups-sidebar/groups-sidebar.component.html
+++ b/cuppa/src/app/groups/groups-sidebar/groups-sidebar.component.html
@@ -1,18 +1,12 @@
-<div class="pl-4 w-100 d-flex" *ngIf="myGroups">
+<div class="pl-4 w-100 d-flex">
   <div class="ml-auto">
-    <!-- <div class="favourites list">
-          <label class="emphasis">Favourites</label>
-          <ul class="nav">
-            <li class="nav-link">Secret Society BLANKET</li>
-          </ul>
-        </div> -->
-    
+
     <div class="groups list">
       <label class="emphasis">Groups</label>
-      <ul class="nav" *ngIf="myGroups">
+      <ul class="nav">
         <!-- routerLinkActive for dynamic links -->
         <!-- https://stackoverflow.com/a/42295902 -->
-        <li class="nav-item" *ngFor="let group of myGroups.groups" [routerLink]="getLink(group._id)"
+        <li class="nav-item" *ngFor="let group of groups$ | async" [routerLink]="getLink(group._id)"
           routerLinkActive="active">
           <a class="nav-link">
             <span>
@@ -22,18 +16,18 @@
         </li>
       </ul>
     </div>
-    
+
     <div class="groups list">
       <label class="emphasis">Communities</label>
       <ul class="nav">
         <li class="nav-link">Mech Keys</li>
         <li class="nav-link">Headphones</li>
-    
+
       </ul>
     </div>
   </div>
-  
 
 
-  
+
+
 </div>
