--- a/cuppa/src/app/groups/group-page/group-page.component.html
+++ b/cuppa/src/app/groups/group-page/group-page.component.html
@@ -7,7 +7,7 @@
   <div class="jumbotron h-400 content mb-0 container ml-0">
 
     <div class="h-100 d-flex">
-      <div class="mt-auto ml-auto" *ngIf="group">
+      <div class="mt-auto ml-auto" *ngIf="group$ | async; let group">  <!-- set the value of group$ | async to the variable group -->
         <div class="d-flex" style="flex-direction: column;">
           <div class="lead fw-400">
             {{ group.members.length }} {{ group.members.length != 1 ? 'members' : 'member' }}
