--- a/cuppa/src/app/meetups/meetups.component.html
+++ b/cuppa/src/app/meetups/meetups.component.html
@@ -1,3 +1,12 @@
-<p>
-  meetups works!
-</p>
+<div class="container mt-4">
+  <h1>Meetups</h1>
+
+  <div>
+    <label class="emphasis">From Your Groups</label>
+    <div class="row">
+      <app-meetup class="col-md-4 col-lg-3"></app-meetup>
+    </div>
+  </div>
+
+
+</div>
