--- a/cuppa/src/app/groups/group/group.component.html
+++ b/cuppa/src/app/groups/group/group.component.html
@@ -1,11 +1,11 @@
 <div class="card w-100 mb-3" style="min-height: 240px;">
   <div class="card-body">
-    <h3 [routerLink]="'/groups/view/' + group._id">{{ group.name }}</h3>
-    
+    <h3 [routerLink]="'/groups/' + group._id">{{ group.name }}</h3>
+
     <div class="row">
       <div class="col-12 col-md-3 mb-3 mb-md-0">
         <label class="secondary">Members</label>
-    
+
         <ul class="group-list">
           <!-- TODO: replace with users-list -->
           <li *ngFor="let member of group.members.slice(0, LIMIT)" class="d-flex">
@@ -16,27 +16,27 @@
           <div class="d-flex"></div>
         </ul>
         <span class="more-text ml-1 my-auto" *ngIf="group.members.length > LIMIT">+ {{group.members.length - LIMIT}} more</span>
-    
+
       </div>
-    
+
       <div class="col-12 col-md-6 mb-3 mb-md-0">
         <label class="secondary">Meetups</label>
-    
+
         <ul class="group-list">
           <li *ngFor="let meetup of group.meetups.slice(0, LIMIT)">
             <div class="d-flex flex-direction-row">
-    
+
               <div style="width: 96px;" class="mt-auto pr-3 d-flex">
                 <label class="highlight mb-0 pb-0 ml-auto">
                   12 Mar
                 </label>
               </div>
-    
+
               <div style="width: 120px;" class="mt-auto pr-3">
                 13.00<br>
                 at Krossroadz
               </div>
-    
+
               <div class="d-flex mt-auto">
                 <span *ngFor="let attendee of meetup.attendees.slice(0, LIMIT_ATTENDEE)">
                   <div class="avatar sm"></div>
@@ -44,28 +44,28 @@
                 <div class="my-auto" *ngIf="meetup.attendees.length > LIMIT_ATTENDEE">
                   +{{meetup.attendees.length - LIMIT_ATTENDEE}}</div>
               </div>
-    
+
             </div>
           </li>
-    
+
           <li>
             <span *ngIf="group.meetups.length > LIMIT">+ {{group.members.length - LIMIT}} more</span>
           </li>
         </ul>
-    
+
       </div>
-    
+
       <div class="col-12 col-md-3">
         <label class="secondary">Actions</label>
-    
+
         <ul class="group-list actions">
-          <li><a [routerLink]="'/groups/view/' + group._id">View Group</a></li>
-          <li><a [routerLink]="['/groups/view', group._id, 'meetups']">Plan a Meetup</a></li>
+          <li><a [routerLink]="'/groups/' + group._id">View Group</a></li>
+          <li><a [routerLink]="['/groups', group._id, 'meetups']">Plan a Meetup</a></li>
           <li><a>Invite</a></li>
         </ul>
-    
+
       </div>
     </div>
   </div>
-  
+
 </div>
