--- a/cuppa/src/app/groups/group-page/group-page.component.html
+++ b/cuppa/src/app/groups/group-page/group-page.component.html
@@ -1,33 +1,8 @@
 <!-- grid, set to same cell => overlapping with same w and h-->
-<div class="d-grid w-100 h-100">
-  <div class="background h-400"></div>
+<router-outlet name="jumbotron"></router-outlet>
 
-  <div class="overlay h-400"></div>
-
-  <div class="jumbotron h-400 content mb-0 container ml-0">
-
-    <div class="h-100 d-flex">
-      <div class="mt-auto ml-auto" *ngIf="group$ | async; let group">  <!-- set the value of group$ | async to the variable group -->
-        <div class="d-flex" style="flex-direction: column;">
-          <div class="lead fw-400">
-            {{ group.members.length }} {{ group.members.length != 1 ? 'members' : 'member' }}
-          </div>
-          <h1 class="display-4">{{ group.name }}</h1>
-          <div class="lead fw-400 w-100 text-right">
-            {{ group.description }}
-          </div>
-          <div class="text-right w-100 mt-3">
-            <!-- TODO join, pass User object down the tree -->
-            <!-- -> pending NgRx store implementation. -->
-            <button class="btn btn-outline-secondary">Member</button>
-          </div>
-        </div>
-      </div>
-    </div>
-
-
-
-  </div>
-</div>
 <app-tab-bar [navItems]="navItems" [alignLeft]="true"></app-tab-bar>
-<router-outlet></router-outlet>
+
+<div class="container ml-0">
+  <router-outlet></router-outlet>
+</div>
