Added a few blank buttons, fix tab bar on groups activity (should be a subscription, not a snapshot as the component is not destroyed and re-created)

--- a/cuppa/src/app/groups/group-page/members/members-list/group-members-list.component.html
+++ b/cuppa/src/app/groups/group-page/members/members-list/group-members-list.component.html
@@ -1,2 +1,9 @@
+<div class="w-100 text-right">
+  <button class="btn btn-outline-secondary">
+    <fa-icon [icon]="faPlus"></fa-icon>
+    Invite
+  </button>
+</div>
+
 <app-users-list [users]="hydrateUserData((group$|async)?.members, (users$|async))">
 </app-users-list>
