--- a/cuppa/src/app/groups/groups-sidebar/groups-sidebar.component.html
+++ b/cuppa/src/app/groups/groups-sidebar/groups-sidebar.component.html
@@ -17,14 +17,13 @@
       </ul>
     </div>
 
-    <div class="groups list">
+    <!-- <div class="groups list">
       <label class="emphasis">Communities</label>
       <ul class="nav">
         <li class="nav-link">Mech Keys</li>
         <li class="nav-link">Headphones</li>
-
       </ul>
-    </div>
+    </div> -->
   </div>
 
 
