--- a/cuppa/src/app/groups/group-page/group-meetups/group-meetups.component.html
+++ b/cuppa/src/app/groups/group-page/group-meetups/group-meetups.component.html
@@ -1,4 +1,11 @@
-<div class="card w-100 mb-3" *ngFor="let meetup of (meetups$ | async)">
+<div class="w-100 text-right">
+  <button class="btn btn-outline-secondary">
+    <fa-icon [icon]="faPlus"></fa-icon>
+    New Meetup
+  </button>
+</div>
+
+<div class="card w-100 my-3" *ngFor="let meetup of (meetups$ | async)">
   <div class="card-body">
     <div class="d-flex w-100" style="flex-direction: row">
       <h3 (click)="meetupClicked(meetup)">
