--- a/cuppa/src/app/meetups/meetup-jumbotron/meetup-jumbotron.component.html
+++ b/cuppa/src/app/meetups/meetup-jumbotron/meetup-jumbotron.component.html
@@ -1,3 +1,15 @@
-<p>
-  meetup-jumbotron works!
-</p>
+<div class="d-grid w-100 h-100" *ngIf="(meetup$ | async); let meetup">
+  <div class="background h-400"></div>
+
+  <div class="overlay h-400"></div>
+
+  <div class="jumbotron h-400 content mb-0 container ml-0">
+
+    <div class="h-100 d-flex">
+      <div class="mt-auto ml-auto">
+        {{ meetup | json }}
+      </div>
+    </div>
+
+  </div>
+</div>
