--- a/cuppa/src/app/meetups/meetup/meetup.component.html
+++ b/cuppa/src/app/meetups/meetup/meetup.component.html
@@ -1,3 +1,10 @@
+<div class="mb-3">
+  <div class="round-button">
+    <fa-icon [icon]="faArrowLeft"></fa-icon>
+  </div>
+  Back to group
+</div>
+
 <div *ngIf="(meetup$ | async)">
   <h1>{{ (meetup$ | async).name }}</h1>
   <a [routerLink]="['/groups', (meetup$ | async).group]">{{ (meetup$ | async).group }}</a>
