Styling, back button to Meetups

--- a/cuppa/src/app/meetups/meetup-jumbotron/meetup-jumbotron.component.html
+++ b/cuppa/src/app/meetups/meetup-jumbotron/meetup-jumbotron.component.html
@@ -3,9 +3,8 @@
 
   <div class="overlay h-400"></div>
 
-  <div class="jumbotron h-400 content mb-0 container ml-0">
-
-    <div class="h-100 d-flex">
+  <div class="jumbotron h-400 content mb-0 ml-0">
+    <div class="h-100 d-flex container">
       <div class="mt-auto ml-auto">
         {{ meetup | json }}
       </div>
