--- a/cuppa/src/app/meetups/meetup/meetup.component.html
+++ b/cuppa/src/app/meetups/meetup/meetup.component.html
@@ -1,51 +1,65 @@
 <div class="container mt-3" *ngIf="meetup$ | async as meetup">
-  <div class="mb-3">
-    <a [routerLink]="['/groups', meetup.group]">
-      <div class="round-button">
-        <fa-icon [icon]="faArrowLeft"></fa-icon>
-      </div>
-      Back to group
-    </a>
+  <div class="mb-3 d-flex">
+    <div class="mr-4">
+      <a [routerLink]="['/groups', meetup.group]">
+        <div class="round-button">
+          <fa-icon [icon]="faArrowLeft"></fa-icon>
+        </div>
+        Back to group
+      </a>
+    </div>
+
+    <div class="mr-4">
+      <a routerLink="..">
+        <div class="round-button">
+          <fa-icon [icon]="faArrowLeft"></fa-icon>
+        </div>
+        Back to Meetups
+      </a>
+    </div>
+
   </div>
+</div>
   <!-- <a [routerLink]="['/groups', (meetup$ | async).group]">{{ (meetup$ | async).group }}</a> -->
 
-  <div>
-    <h1>{{ meetup.name }}</h1>
+<app-meetup-jumbotron class="w-100"></app-meetup-jumbotron>
 
-    <br>
-    {{ meetup | json }}
+<div class="container mt-3" *ngIf="meetup$ | async as meetup">
+  <h1>{{ meetup.name }}</h1>
 
-    <div class="mt-3">
-      <div class="d-flex flex-wrap">
-        <h3>Events</h3>
-        <button class="ml-auto my-auto btn btn-outline-secondary">New Event</button>
-      </div>
+  <br>
+  {{ meetup | json }}
 
+  <div class="mt-3">
+    <div class="d-flex flex-wrap">
+      <h3>Events</h3>
+      <button class="ml-auto my-auto btn btn-outline-secondary">New Event</button>
     </div>
-
-    <hr>
-
-    <div class="mt-3">
-      <div class="d-flex flex-wrap">
-        <h3>Teams</h3>
-        <button class="ml-auto my-auto btn btn-outline-secondary">New Team</button>
-      </div>
-
-    </div>
-
-    <hr>
-
-    <div class="mt-3">
-      <div class="d-flex flex-wrap">
-        <h3>Attendees</h3>
-        <button class="ml-auto my-auto btn btn-outline-secondary">Invite</button>
-      </div>
-
-    </div>
-
-
-
 
   </div>
 
+  <hr>
+
+  <div class="mt-3">
+    <div class="d-flex flex-wrap">
+      <h3>Teams</h3>
+      <button class="ml-auto my-auto btn btn-outline-secondary">New Team</button>
+    </div>
+
+  </div>
+
+  <hr>
+
+  <div class="mt-3">
+    <div class="d-flex flex-wrap">
+      <h3>Attendees</h3>
+      <button class="ml-auto my-auto btn btn-outline-secondary">Invite</button>
+    </div>
+
+  </div>
+
+
+
+
 </div>
+
