--- a/cuppa/src/app/groups/group-settings/group-settings.component.html
+++ b/cuppa/src/app/groups/group-settings/group-settings.component.html
@@ -3,5 +3,10 @@
     <label>Name</label>
     <input type="text" class="form-control" [(ngModel)]="group.name">
   </div>
+
+  <div class="form-group">
+    <label>Description</label>
+    <input type="text" class="form-control" [(ngModel)]="group.description">
+  </div>
 </div>
 
