--- a/cuppa/src/app/meetups/meetup/meetup.component.html
+++ b/cuppa/src/app/meetups/meetup/meetup.component.html
@@ -33,6 +33,19 @@
   {{ meetup | json }}
 
   <div class="mt-3">
+    <h3>Venue</h3>
+    <div class="form-group">
+      <label>Location</label>
+      <textarea class="form-control"></textarea>
+    </div>
+
+    <div clas="form-group">
+      <label>Time</label>
+      TODO time picker
+    </div>
+  </div>
+
+  <!-- <div class="mt-3">
     <div class="d-flex flex-wrap">
       <h3>Events</h3>
       <button class="ml-auto my-auto btn btn-outline-secondary">New Event</button>
@@ -58,7 +71,7 @@
       <button class="ml-auto my-auto btn btn-outline-secondary">Invite</button>
     </div>
 
-  </div>
+  </div> -->
 
 
 
